force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__ApplyToProductOptions__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ApplyToProductOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apply configuration attribute selection to product options.</description>
        <inlineHelpText>Select the checkbox to apply configuration attribute selection to product options.</inlineHelpText>
        <label>Apply To Product Options</label>
        <type>Checkbox</type>
    </CustomField>