force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__ColumnOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ColumnOrder__c</fullName>
        <description>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute. A maximum of 3 columns is allowed.</description>
        <inlineHelpText>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute. A maximum of 3 columns is allowed.</inlineHelpText>
        <label>Column Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>