force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__DefaultObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DefaultObject__c</fullName>
        <description>Target object for the default value of the attribute.</description>
        <inlineHelpText>Target object for the default value of the attribute.</inlineHelpText>
        <label>Default Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote__c</fullName>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>QuoteLineGroup__c</fullName>
                    <label>Quote Line Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>