force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__DisplayOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>This is the order in which the Configuration Attributes will be displayed.</description>
        <inlineHelpText>If there is no display order associated with a Configuration Attribute, order is determined by Related Content name.</inlineHelpText>
        <label>Row Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>