force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__Feature__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature in which this attribute should be rendered.</description>
        <inlineHelpText>Specify the feature in which this attribute should be entered.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Product__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </CustomField>