force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__Global__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Global__c</fullName>
        <description>Indicates if this attribute has a global target field.</description>
        <formula>CONTAINS(TEXT(SBQQ__TargetField__c), &apos;.&apos;)</formula>
        <inlineHelpText>Indicates if this attribute has a global target field.</inlineHelpText>
        <label>Global</label>
        <type>Checkbox</type>
    </CustomField>