force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__Hidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</description>
        <inlineHelpText>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </CustomField>