force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__HiddenValues__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HiddenValues__c</fullName>
        <description>Values from the backing picklist field that should be hidden on this bundle.</description>
        <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be hidden on this bundle.</inlineHelpText>
        <label>Hidden Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </CustomField>