force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being configured.</description>
        <inlineHelpText>Specify product on which you are creating the attribute.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </CustomField>