force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__Required__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the attributes requires a value.</description>
        <inlineHelpText>Specify whether this attribute requires a value.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </CustomField>