force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__TargetField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetField__c</fullName>
        <description>Field on the Product Option that sources remaining metadata and holds the value.</description>
        <inlineHelpText>Specify field on Product Option that will hold this attribute&apos;s value.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Revenue_Type__c</fullName>
                </value>
                <value>
                    <fullName>License_Metric__c</fullName>
                </value>
                <value>
                    <fullName>Third_Party_Vendor__c</fullName>
                </value>
                <value>
                    <fullName>RR_Edition__c</fullName>
                </value>
                <value>
                    <fullName>RR_SubEdition__c</fullName>
                </value>
                <value>
                    <fullName>LM_Copy_1__c</fullName>
                </value>
                <value>
                    <fullName>LM_Copy_2__c</fullName>
                </value>
                <value>
                    <fullName>LM_Copy_3__c</fullName>
                </value>
                <value>
                    <fullName>LM_QTY_1__c</fullName>
                </value>
                <value>
                    <fullName>LM_QTY_2__c</fullName>
                </value>
                <value>
                    <fullName>LM_QTY_3__c</fullName>
                </value>
                <value>
                    <fullName>Location__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>