force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/recordTypes/SBQQ__Configuration_Attribute.recordType-meta.xml
<RecordType>
        <fullName>SBQQ__Configuration_Attribute</fullName>
        <active>true</active>
        <description>Configuration Attribute associated to a product</description>
        <label>Configuration Attribute</label>
    </RecordType>