force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/recordTypes/SBQQ__Global_Attribute.recordType-meta.xml
<RecordType>
        <fullName>SBQQ__Global_Attribute</fullName>
        <active>true</active>
        <description>Definition of an Attribute Item</description>
        <label>Global Attribute</label>
    </RecordType>