force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/validationRules/SBQQ__Column_Order_is_required.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Column_Order_is_required</fullName>
        <active>true</active>
        <description>Column Order is required</description>
        <errorConditionFormula>if (Text( SBQQ__ColumnOrder__c ) == &apos;&apos;, true, false)</errorConditionFormula>
        <errorMessage>Column Order is required.</errorMessage>
    </ValidationRule>