force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/validationRules/SBQQ__Product_is_required_if_not_global.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Product_is_required_if_not_global</fullName>
        <active>false</active>
        <description>Product is required (not implemented; override existing validation rule behavior for existing orgs</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>Product is required.</errorMessage>
    </ValidationRule>