force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/listViews/SBQQ__ConfigurationAttributes.listView-meta.xml
<ListView>
        <fullName>SBQQ__ConfigurationAttributes</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__TargetField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SBQQ__ConfigurationAttribute__c.SBQQ__Configuration_Attribute</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Configuration Attributes</label>
        <language>en_US</language>
    </ListView>