force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/listViews/SBQQ__GlobalAttributes.listView-meta.xml
<ListView>
        <fullName>SBQQ__GlobalAttributes</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__TargetField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SBQQ__ConfigurationAttribute__c.SBQQ__Global_Attribute</value>
        </filters>
        <label>Global Attributes</label>
        <language>en_US</language>
    </ListView>